compiler/testData/cli/jvm/diagnosticTests/kotlinPackage.out
compiler/testData/cli/kotlinPackage.kt:1:1: error: only the Kotlin standard library is allowed to use the 'kotlin' package
package kotlin.mylibrary
^^^^^^^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
